// Copyright 2019 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.core;
option go_package = "chromiumos/tast/internal/protocol";

service Logging {
  // ReadLogs subscribes to logs emitted by gRPC services.
  // At the beginning of the call, one ReadLogsResponse with empty entry is
  // sent to indicate success of subscription. Afterwards ReadLogsResponse is
  // sent back as a stream as logs are emitted. The response stream is closed
  // when the client closes the request stream or any error occurs.
  // At most one client can have an active call of this method at a time.
  rpc ReadLogs(stream ReadLogsRequest) returns (stream ReadLogsResponse) {}
}

message ReadLogsRequest {}

message ReadLogsResponse {
  // entry is an emitted log entry. It is missing for an initial
  // ReadLogsResponse to indicate success of subscription.
  LogEntry entry = 1;
}

message LogEntry {
  // Msg is a logged message.
  string msg = 1;
  // Seq is an ID of the log entry. It is a sequentially increasing number
  // starting from 1.
  uint64 seq = 2;
}
